[gd_scene load_steps=6 format=2]

[ext_resource path="res://ArtAssets/enemy-stand_static.png" type="Texture" id=1]
[ext_resource path="res://EnemyCharacter.gd" type="Script" id=2]
[ext_resource path="res://StatBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://StatDisplay.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 256.442

[node name="EnemyCharacter" type="Sprite"]
position = Vector2( 149.216, 133.342 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.32739, 19.8112 )
shape = SubResource( 1 )

[node name="StatBlock" parent="." instance=ExtResource( 3 )]

[node name="StatDisplay" parent="." instance=ExtResource( 4 )]
margin_left = -173.982
margin_top = 413.44
margin_right = -5.98163
margin_bottom = 535.44

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="die" from="StatBlock" to="." method="_on_StatBlock_die"]
[connection signal="health_changed" from="StatBlock" to="StatDisplay" method="_on_StatBlock_health_changed"]
[connection signal="mana_changed" from="StatBlock" to="StatDisplay" method="_on_StatBlock_mana_changed"]
[connection signal="stamina_changed" from="StatBlock" to="StatDisplay" method="_on_StatBlock_stamina_changed"]
